# docker-workspaces

./: .env  .gitignore  .travis.yml  Dockerfile  README.md  build.sh  docker-compose.yml  fabfile.py  requirements-dev.txt  setup.sh  test.sh
dotfiles/: .tmux.conf.local  .zshrc
resources/: .zshrc  supervisord.conf
tests/package_python_test/: pyproject.toml  tox.ini
