[tool.poetry]
name = "package_python_test"
version = "0.1.0"
description = ""
authors = ["Luc Nguyen <admin@minhluc.info>"]

[tool.poetry.dependencies]
python = "^3.8"
h3 = "^3.4.3"
google-cloud-translate = "^2.0.0"
google-cloud-bigtable = "^1.2.1"
psycopg2-binary = "^2.8.4"
Urllib3 = "^1.25.8"
requests = "^2.22.0"
python-dateutil = "^2.8.1"
pyyaml = "^5.3"
jmespath = "^0.9.4"
colorama = "^0.4.3"
simplejson = "^3.17.0"

[tool.poetry.dev-dependencies]
tox = "^3.14.3"
flake8 = "^3.7.9"
pylint = "^2.4.4"
six = "^1.14.0"
mock = "^3.0.5"
pytest = "^5.3.5"
apache-airflow = "1.10.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"